--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,5 @@ plugins:
 - jekyll-remote-theme
 
 theme: jekyll-theme-midnight
-title: Portfolio
+title: Exzh
+description: A website to host my CTF notes and other projects learning paths.
