Added description and tittle

--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@ plugins:
 
 theme: jekyll-theme-midnight
 title: Exzh
-description: A website to host my CTF notes and other projects learning paths.
+description: A website to host CTF notes and other projects learning paths.
